Fix/message overflow

--- a/src/components/Chat/components/MessageComponent/styles.module.scss
+++ b/src/components/Chat/components/MessageComponent/styles.module.scss
@@ -76,13 +76,13 @@
 .message {
   grid-area: message;
   display: flex;
-  flex-direction: column;
   position: relative;
   box-sizing: border-box;
   width: 75%;
   margin: 0;
-  padding: 12px 14px;
+  padding: 12px 50px 12px 14px;
   border-radius: 14px;
+  word-wrap: anywhere;
   
   font-family: Montserrat;
   font-style: normal;
@@ -97,13 +97,13 @@
 .myMessage {
   grid-area: message;
   display: flex;
-  flex-direction: column;
   position: relative;
   box-sizing: border-box;
   width: 75%;
   margin: 0 0 0 auto;
-  padding: 12px 14px;
+  padding: 12px 50px 12px 14px;
   border-radius: 14px;
+  word-wrap: anywhere;
   
   font-family: Montserrat;
   font-style: normal;
@@ -116,7 +116,9 @@
 }
 
 .time {
-  align-self: end;
+  position: absolute;
+  bottom: 13px;
+  right: 13px;
   font-size: 13px;
   font-weight: 400;
   line-height: 18px;
